--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retrograde-rotation",
+  "name": "shatur_gold",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -9,6 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.16.6"
+    "@tailwindcss/vite": "^4.1.18",
+    "astro": "^5.17.1",
+    "tailwindcss": "^4.1.18"
   }
 }
